@@ -119,6 +119,7 @@ that cygwin-1.3.x is no longer supported; upgrade to cygwin-1.5.5 or newer.)
   libguile12
   libkpathsea3
   libreadline5
+  perl
   python
   sed
   sh-utils
