@@ -26,9 +26,47 @@ If you are not 100% exactly sure of what you're doing, then just click
 
 
 <h2>Testing the install</h2>
+
+<p>
+If you are using version 1.8.2-1 or newer, try this first.
+
+Download this first .ly example:<br><blockquote>
+<a href="http://savannah.gnu.org/cgi-bin/viewcvs/lilypond/lilypond/input/example-1.ly?rev=HEAD&content-type=application/x-lilypond">example-1.ly</a>
+</blockquote>
+
+<!--
+Better Include example-1.ly in website?  But how to set mime type?
+
+text/plain opens in browser; we want: save to disk
+
+<a href="http://savannah.gnu.org/cgi-bin/viewcvs/lilypond/lilypond/input/example-1.ly?rev=HEAD&content-type=text/plain">example-1.ly</a>
+
+<a href="http://savannah.gnu.org/cgi-bin/viewcvs/lilypond/lilypond/input/example-1.ly?rev=HEAD&content-type=application/octet-stream">example-1.ly</a>
+
+<a href="http://lilypond.org/doc/v1.8/input/example-1.ly">example-1.ly</a>
+!-->
+
+to your desktop.  It should be called: 'example-1.ly' (not
+example-1.ly.TXT).  Double-click on the .ly file on your desktop.
+LilyPond should generate the file and open your favourite PDF viewer.
+
+<p>
+See <a href="getting-started.html">getting started</a> for more
+information and how to create your first LilyPond .ly music file.
+
+<!-- Copy the appropriate example:
+
+<dl>
+ <dt>for LilyPond 1.8: </dt><dd><a href="/doc/v1.8/input/example-1.ly">example-1.ly</a></dd>
+ <dt>for LilyPond 1.9: </dt><dd><a href="/doc/v1.9/input/example-1.ly">example-1.ly</a></dd>
+</dl>
+
 <p>
 Go <a href="getting-started.html">here</a> to test your
 installation.
+
+!-->
+
 
 <h2>Uninstalling</h2>
 
